PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/HolidayAction__c.object-meta.xml
<CustomObject>
    <description>HolidayAction__c</description>
    <label>휴가신청</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>