PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/ApprovalType__c.field-meta.xml
<CustomField>
    <fullName>ApprovalType__c</fullName>
    <label>승인요청 구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>휴가승인요청</fullName>
            </value>
            <value>
                <fullName>휴가승인취소요청</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>