PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/CancleDescription__c.field-meta.xml
<CustomField>
    <fullName>CancleDescription__c</fullName>
    <description>승인된 휴가 취소 사유</description>
    <label>CancleDescription</label>
    <type>TextArea</type>
</CustomField>