PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/Current_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Record_ID__c</fullName>
    <label>Current Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>