PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>휴가신청</relationshipLabel>
    <relationshipName>HolidayActionV4Zc</relationshipName>
    <type>Lookup</type>
</CustomField>