PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/FirstHolidayRequest__c.field-meta.xml
<CustomField>
    <fullName>FirstHolidayRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1차 승인자 지정</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Holiday_Action1</relationshipName>
    <type>Lookup</type>
</CustomField>