PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/Fm_Holiday_Period__c.field-meta.xml
<CustomField>
    <fullName>Fm_Holiday_Period__c</fullName>
    <formula>IF(
				OR(ISPICKVAL(HolidayAction_Type__c,&quot;Half-day Leave&quot;),
							ISPICKVAL(HolidayAction_Type__c,&quot;Reward Half-Holiday&quot;)
							),
TEXT(fm_MinDate__c)+&quot;(&quot;+HolidayAction_HalfdayType__c+&quot;)&quot;,
				IF(HolidayAction_Days__c	= 1, TEXT(HolidayAction_Date1__c),
							TEXT(fm_MinDate__c)+&quot;~&quot;+TEXT(fm_MaxDate__c)
							)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>휴가기간</label>
    <type>Text</type>
</CustomField>