PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/Fm_HolidayPeriod_4_Calender__c.field-meta.xml
<CustomField>
    <fullName>Fm_HolidayPeriod_4_Calender__c</fullName>
    <description>캘린더 표시용 필드</description>
    <formula>HolidayAction_UserName__c+&quot; &quot;+Fm_Holiday_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>휴가신청기간(캘린더용)</label>
    <type>Text</type>
</CustomField>