PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/fm_MaxDate__c.field-meta.xml
<CustomField>
    <fullName>fm_MaxDate__c</fullName>
    <formula>CASE(
  Max(
    YEAR(HolidayAction_Date1__c) * 10000 + MONTH(HolidayAction_Date1__c) * 100  + DAY(HolidayAction_Date1__c),
    BLANKVALUE(YEAR(HolidayAction_Date2__c) * 10000 + MONTH(HolidayAction_Date2__c) * 100  + DAY(HolidayAction_Date2__c), 1),
    BLANKVALUE(YEAR(HolidayAction_Date3__c) * 10000 + MONTH(HolidayAction_Date3__c) * 100  + DAY(HolidayAction_Date3__c), 1),
    BLANKVALUE(YEAR(HolidayAction_Date4__c) * 10000 + MONTH(HolidayAction_Date4__c) * 100  + DAY(HolidayAction_Date4__c), 1),
    BLANKVALUE(YEAR(HolidayAction_Date5__c) * 10000 + MONTH(HolidayAction_Date5__c) * 100  + DAY(HolidayAction_Date5__c), 1) 
  ),
  YEAR(HolidayAction_Date1__c) * 10000 + MONTH(HolidayAction_Date1__c) * 100  + DAY(HolidayAction_Date1__c), HolidayAction_Date1__c, 
  YEAR(HolidayAction_Date2__c) * 10000 + MONTH(HolidayAction_Date2__c) * 100  + DAY(HolidayAction_Date2__c), HolidayAction_Date2__c, 
  YEAR(HolidayAction_Date3__c) * 10000 + MONTH(HolidayAction_Date3__c) * 100  + DAY(HolidayAction_Date3__c), HolidayAction_Date3__c, 
  YEAR(HolidayAction_Date4__c) * 10000 + MONTH(HolidayAction_Date4__c) * 100  + DAY(HolidayAction_Date4__c), HolidayAction_Date4__c,
  HolidayAction_Date5__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Date</label>
    <type>Date</type>
</CustomField>