PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/fm_registeredDays__c.field-meta.xml
<CustomField>
    <fullName>fm_registeredDays__c</fullName>
    <formula>IF(TEXT(HolidayAction_Type__c) = &apos;Half-day Leave&apos;, 0.5, HolidayAction_Days__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>신청일수</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>