PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/Holiday_Date_Detail__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Date_Detail__c</fullName>
    <formula>IF( TEXT(HolidayAction_Date1__c) &lt;&gt; &quot;&quot;, TEXT(HolidayAction_Date1__c),&quot;&quot;) + 
IF( TEXT(HolidayAction_Date2__c) &lt;&gt; &quot;&quot;, &quot;, &quot;+TEXT(HolidayAction_Date2__c),&quot;&quot;) + 
IF( TEXT(HolidayAction_Date3__c) &lt;&gt; &quot;&quot;, &quot;, &quot;+TEXT(HolidayAction_Date3__c),&quot;&quot;) + 
IF( TEXT(HolidayAction_Date4__c) &lt;&gt; &quot;&quot;, &quot;, &quot;+TEXT(HolidayAction_Date4__c),&quot;&quot;) + 
IF( TEXT(HolidayAction_Date5__c) &lt;&gt; &quot;&quot;, &quot;, &quot;+TEXT(HolidayAction_Date5__c),&quot;&quot;) + 
IF( TEXT(HolidayAction_Date6__c) &lt;&gt; &quot;&quot;, &quot;, &quot;+TEXT(HolidayAction_Date6__c),&quot;&quot;) + 
IF( TEXT(HolidayAction_Date7__c) &lt;&gt; &quot;&quot;, &quot;, &quot;+TEXT(HolidayAction_Date7__c),&quot;&quot;) + 
IF( TEXT(HolidayAction_Date8__c) &lt;&gt; &quot;&quot;, &quot;, &quot;+TEXT(HolidayAction_Date8__c),&quot;&quot;) + 
IF( TEXT(HolidayAction_Date9__c) &lt;&gt; &quot;&quot;, &quot;, &quot;+TEXT(HolidayAction_Date9__c),&quot;&quot;) + 
IF( TEXT(HolidayAction_Date10__c) &lt;&gt; &quot;&quot;, &quot;, &quot;+TEXT(HolidayAction_Date10__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>휴가일자 상세</label>
    <type>Text</type>
</CustomField>