PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_Approver__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If you are working in main office then select your manager either you are out of office then select there PM.</inlineHelpText>
    <label>Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Id</field>
            <operation>notEqual</operation>
            <valueField>User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Holiday_Action</relationshipName>
    <type>Lookup</type>
</CustomField>