PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_Date10__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_Date10__c</fullName>
    <label>Date10</label>
    <type>Date</type>
</CustomField>