PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_Date1__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_Date1__c</fullName>
    <label>Date1</label>
    <type>Date</type>
</CustomField>