PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_Date2__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_Date2__c</fullName>
    <label>Date2</label>
    <type>Date</type>
</CustomField>