PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_Days__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_Days__c</fullName>
    <inlineHelpText>Women&apos;s Holiday 1.
Alternative Holiday 0.
Other Holidays from 1 to 5.</inlineHelpText>
    <label>Days</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>