PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_Description__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>