PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_HalfdayTime__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_HalfdayTime__c</fullName>
    <label>Half-day leave Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>