PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_HalfdayType__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_HalfdayType__c</fullName>
    <formula>CASE( HolidayAction_HalfdayTime__c,
&quot;AM&quot;, &quot;오전&quot;,
&quot;PM&quot;, &quot;오후&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>반차구분</label>
    <type>Text</type>
</CustomField>