PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_IsConfirm__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_IsConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Confirm?</label>
    <type>Checkbox</type>
</CustomField>