PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_IsEmergency__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_IsEmergency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check This field when you want use Holidays before approval process.</inlineHelpText>
    <label>Is emergency?</label>
    <type>Checkbox</type>
</CustomField>