PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_Parent__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_Parent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Holiday</label>
    <referenceTo>Holiday__c</referenceTo>
    <relationshipName>Holiday_Action</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>