PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_Type__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Holiday</fullName>
                <label>연차</label>
            </value>
            <value>
                <fullName>Half-day Leave</fullName>
                <label>반차</label>
            </value>
            <value>
                <fullName>Reward Holiday</fullName>
                <label>대체휴가</label>
            </value>
            <value>
                <fullName>Reward Half-Holiday</fullName>
                <label>대체휴가(반차)</label>
            </value>
            <value>
                <fullName>Public Works</fullName>
                <label>공가(공무)</label>
            </value>
            <value>
                <fullName>Family Leave</fullName>
                <label>경조휴가</label>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
                <label>병가(무급)</label>
            </value>
            <value>
                <fullName>Women Holiday</fullName>
                <label>생리휴가</label>
            </value>
            <value>
                <fullName>가족돌봄휴가</fullName>
            </value>
            <value>
                <fullName>출산휴가</fullName>
            </value>
            <value>
                <fullName>휴직</fullName>
            </value>
            <value>
                <fullName>육아휴직</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>