PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/HolidayAction_UserName__c.field-meta.xml
<CustomField>
    <fullName>HolidayAction_UserName__c</fullName>
    <formula>HolidayAction_Parent__r.Holiday_User__r.LastName &amp;  HolidayAction_Parent__r.Holiday_User__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Name</label>
    <type>Text</type>
</CustomField>