PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/Is_Cancled__c.field-meta.xml
<CustomField>
    <fullName>Is_Cancled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>개인 사정으로 인해 승인된 휴가를 취소</description>
    <label>Is Canceled?</label>
    <type>Checkbox</type>
</CustomField>