PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>CreatedBy.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive?</label>
    <type>Checkbox</type>
</CustomField>