PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/isRejected__c.field-meta.xml
<CustomField>
    <fullName>isRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rejected?</label>
    <type>Checkbox</type>
</CustomField>