PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>프로젝트 PM</fullName>
            </value>
            <value>
                <fullName>프로젝트 팀원</fullName>
            </value>
            <value>
                <fullName>본사근무</fullName>
            </value>
            <value>
                <fullName>임원</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>