PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/Review__c.field-meta.xml
<CustomField>
    <fullName>Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>검토여부</label>
    <type>Checkbox</type>
</CustomField>