PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/SalaryPaid__c.field-meta.xml
<CustomField>
    <fullName>SalaryPaid__c</fullName>
    <formula>CASE(HolidayAction_Type__c, &quot;Sick Leave&quot;, &quot;무급&quot;, &quot;Women Holiday&quot;, &quot;무급&quot;, &quot;유급&quot;)</formula>
    <label>급여 지급구분</label>
    <type>Text</type>
</CustomField>