PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/SecondApproverSelection__c.field-meta.xml
<CustomField>
    <fullName>SecondApproverSelection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2차 승인 여부</label>
    <type>Checkbox</type>
</CustomField>