PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/fields/ThirdApprovalSelection__c.field-meta.xml
<CustomField>
    <fullName>ThirdApprovalSelection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3차 승인 지정여부</label>
    <type>Checkbox</type>
</CustomField>