PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/validationRules/CheckPositionForProject.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckPositionForProject</fullName>
    <active>false</active>
    <description>Position이 &apos;프로젝트&apos; 키워드를 포함하는 경우, 프로젝트 값이 존재해야하고, Position이 &apos;프로젝트&apos; 키워드를 포함하지 않는 경우, 프로젝트 값이 없어야함.</description>
    <errorConditionFormula>IF(
    OR(
        ISPICKVAL( Position__c, &quot;프로젝트 PM&quot; ),
        ISPICKVAL( Position__c, &quot;프로젝트 팀원&quot; )
    ),
    Project__c = &quot;&quot;,
    Project__c != &quot;&quot;
)</errorConditionFormula>
    <errorDisplayField>Project__c</errorDisplayField>
    <errorMessage>Position이 프로젝트 PM, 프로젝트 팀원인 경우, 프로젝트 값을 입력해야합니다.(그렇지 않은 경우, 프로젝트 값을 제거해주세요.)</errorMessage>
</ValidationRule>