PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/validationRules/YearCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>YearCheck</fullName>
    <active>false</active>
    <description>승인되지 않은 휴가신청의 경우 당해년도의 일자만 입력 가능</description>
    <errorConditionFormula>IF( AND( HolidayAction_IsConfirm__c = FALSE,
								 TEXT( Approval_Status__c ) != &apos;Approved&apos;),
			OR( YEAR( TODAY() ) !=  YEAR( (HolidayAction_Date1__c)),
			 YEAR( TODAY()) !=  YEAR( (HolidayAction_Date2__c)),
			 YEAR( TODAY()) !=  YEAR( (HolidayAction_Date3__c)),
			 YEAR( TODAY()) !=  YEAR( (HolidayAction_Date4__c)),
			 YEAR( TODAY()) !=  YEAR( (HolidayAction_Date5__c)),
			 YEAR( TODAY()) !=  YEAR( (HolidayAction_Date6__c)),
			 YEAR( TODAY()) !=  YEAR( (HolidayAction_Date7__c)),
			 YEAR( TODAY()) !=  YEAR( (HolidayAction_Date8__c)),
			 YEAR( TODAY()) !=  YEAR( (HolidayAction_Date9__c)),
			 YEAR( TODAY()) !=  YEAR( (HolidayAction_Date10__c))
					),
			FALSE)</errorConditionFormula>
    <errorMessage>당해년도의 휴가만 신청 가능합니다.</errorMessage>
</ValidationRule>