PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>HolidayAction_Description__c</columns>
    <columns>HolidayAction_Type__c</columns>
    <columns>SalaryPaid__c</columns>
    <columns>fm_registeredDays__c</columns>
    <columns>Holiday_Date_Detail__c</columns>
    <columns>FirstHolidayRequest__c</columns>
    <columns>HolidayAction_IsConfirm__c</columns>
    <columns>Is_Cancled__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>