PA_Education/TestMenifest/force-app/main/default/objects/HolidayAction__c/listViews/Confirmed_Holiday.listView-meta.xml
<ListView>
    <fullName>Confirmed_Holiday</fullName>
    <columns>HolidayAction_UserName__c</columns>
    <columns>NAME</columns>
    <columns>HolidayAction_Description__c</columns>
    <columns>HolidayAction_Type__c</columns>
    <columns>fm_registeredDays__c</columns>
    <columns>Holiday_Date_Detail__c</columns>
    <columns>FirstHolidayRequest__c</columns>
    <columns>HolidayAction_IsConfirm__c</columns>
    <columns>Is_Cancled__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HolidayAction_IsConfirm__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Confirmed Holiday</label>
</ListView>